2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Change the default -o value to
	  include a "cache" intermediate directory.  This makes it easier to
	  kill the entire cache at once.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Provide nice default -o value.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Load documentation through a
	  HelpSource, not through the RootTree, as URLs of the form
	  "ecma:0#AvoidExtensionMethodOnSystemObjectRule/" use the number (0
	  in this case) as a HelpSource-relative identifier.  Result: you get
	  the wrong documentation if you go through RootTree.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add reference to System.Web.dll, for HttpUtility.
	* mdoc.exe.sources: Add ObjectRocks.cs, webdoc.cs to the build.
	* Mono.Documentation/mdoc.cs: Add export-html-webdoc command, which
	  "pre-renders" HTML for use by the webdoc ASP.NET renderer.
	* Mono.Documentation/webdoc.cs: Added; MDocExportWebdocHtml
	  implementation; attempts to pre-render HTML based on .tree/.zip
	  file contents.
	* Mono.Documentation/ObjectRocks.cs: Added; extension methods for tree
	  traversal (from Mono.Rocks).  For use in webdoc.cs.

2009-04-09  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Using a single IAssemblyResolver is
	  an improvement, but doesn't fix all problems.  In particular, some
	  assemblies will depend upon other assemblies to load (e.g. 3rd party
	  assemblies) but these dependent assemblies shouldn't be documented.
	  Add support for -r:ASSEMBLY and -L:DIRECTORY arguments to allow the
	  user to manually add to the assembly search path so that assemblies
	  can be found.  Assemblies added via -r will NOT be documented.

2009-04-08  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Use a single IAssemblyResolver